--- a/www/css/index.css
+++ b/www/css/index.css
@@ -16,66 +16,74 @@
  * specific language governing permissions and limitations
  * under the License.
  */
-* {
-    -webkit-tap-highlight-color: rgba(0,0,0,0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
-}
-
+ @import url('//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
+ * {
+     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+     /* make transparent link selection, adjust last value opacity 0 to 1.0 */
+ }
 body {
-    -webkit-touch-callout: none;                /* prevent callout to copy image, etc when tap to hold */
-    -webkit-text-size-adjust: none;             /* prevent webkit from resizing text to fit */
-    -webkit-user-select: none;                  /* prevent copy paste, to allow, change 'none' to 'text' */
-    background-color:#E4E4E4;
-    background-image:linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
-    background-image:-webkit-linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
-    background-image:-ms-linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
-    background-image:-webkit-gradient(
-        linear,
-        left top,
-        left bottom,
-        color-stop(0, #A7A7A7),
-        color-stop(0.51, #E4E4E4)
-    );
-    background-attachment:fixed;
-    font-family:'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif;
-    font-size:12px;
-    height:100%;
-    margin:0px;
-    padding:0px;
-    text-transform:uppercase;
-    width:100%;
+    -webkit-touch-callout: none;
+    /* prevent callout to copy image, etc when tap to hold */
+    -webkit-text-size-adjust: none;
+    /* prevent webkit from resizing text to fit */
+    -webkit-user-select: none;
+    /* prevent copy paste, to allow, change 'none' to 'text' */
+    background-color: #E4E4E4;
+    background-image: linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
+    background-image: -webkit-linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
+    background-image: -ms-linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
+    background-image: -webkit-gradient( linear, left top, left bottom, color-stop(0, #A7A7A7), color-stop(0.51, #E4E4E4));
+    background-attachment: fixed;
+    font-family: 'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif;
+    font-size: 12px;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    /*text-transform:uppercase;*/
+    width: 100%;
 }
 
 /* Portrait layout (default) */
 .app {
-    background:url(../img/logo.png) no-repeat center top; /* 170px x 200px */
-    position:absolute;             /* position in the center of the screen */
-    left:50%;
-    top:50%;
-    height:50px;                   /* text area height */
-    width:225px;                   /* text area width */
-    text-align:center;
-    padding:180px 0px 0px 0px;     /* image height is 200px (bottom 20px are overlapped with text) */
-    margin:-115px 0px 0px -112px;  /* offset vertical: half of image height and text area height */
-                                   /* offset horizontal: half of text area width */
+    background: url(../img/logo.png) no-repeat center top;
+    /* 170px x 200px */
+    position: absolute;
+    /* position in the center of the screen */
+    left: 50%;
+    top: 50%;
+    height: 50px;
+    /* text area height */
+    width: 225px;
+    /* text area width */
+    text-align: center;
+    padding: 180px 0px 0px 0px;
+    /* image height is 200px (bottom 20px are overlapped with text) */
+    margin: -115px 0px 0px -112px;
+    /* offset vertical: half of image height and text area height */
+    /* offset horizontal: half of text area width */
 }
 
 /* Landscape layout (with min-width) */
+
 @media screen and (min-aspect-ratio: 1/1) and (min-width:400px) {
     .app {
-        background-position:left center;
-        padding:75px 0px 75px 170px;  /* padding-top + padding-bottom + text area = image height */
-        margin:-90px 0px 0px -198px;  /* offset vertical: half of image height */
-                                      /* offset horizontal: half of image width and text area width */
+        background-position: left center;
+        padding: 75px 0px 75px 170px;
+        /* padding-top + padding-bottom + text area = image height */
+        margin: -90px 0px 0px -198px;
+        /* offset vertical: half of image height */
+        /* offset horizontal: half of image width and text area width */
     }
 }
 
+
 h1 {
-    font-size:24px;
-    font-weight:normal;
-    margin:0px;
-    overflow:visible;
-    padding:0px;
-    text-align:center;
+    font-size: 24px;
+    font-weight: normal;
+    margin: 0px;
+    overflow: visible;
+    padding: 0px;
+    text-align: center;
 }
 
 .event {
@@ -98,18 +106,209 @@ h1 {
 }
 
 @keyframes fade {
-    from { opacity: 1.0; }
-    50% { opacity: 0.4; }
-    to { opacity: 1.0; }
+    from { 
+        opacity: 1.0;
+    }
+    50% {
+         opacity: 0.4;
+    }
+    to { 
+        opacity: 1.0; 
+    }
 }
  
 @-webkit-keyframes fade {
-    from { opacity: 1.0; }
-    50% { opacity: 0.4; }
-    to { opacity: 1.0; }
+    from { 
+        opacity: 1.0; 
+    }
+    50% {
+         opacity: 0.4; 
+        }
+    to {
+         opacity: 1.0; 
+    }
 }
  
 .blink {
     animation:fade 3000ms infinite;
     -webkit-animation:fade 3000ms infinite;
+}
+
+
+/* Custom CSS */
+
+.appBar {
+    text-transform: uppercase;
+}
+
+.ul-content a{
+    text-decoration: none !important;
+}
+
+.ui-header .backButton {
+    font-size: 10px !important;
+    padding-left: 33px;
+}
+
+.homeHeader img{
+    width: 65%;
+    margin-top: 10%;
+}
+.homeHeader h2 {
+    color: #324a5d;
+    font-variant: small-caps;
+    font-size: xx-large;
+}
+/* Success, error, info and warning boxes */
+
+.successBox {
+    color: #4F8A10;
+    background-color: #DFF2BF;
+}
+
+.successBox, .errorBox, .warningBox, .infoBox {
+    margin: 10px 16px;
+    padding: 12px;
+    border-radius: .5em;
+}
+
+.infoBox {
+    color: #00529B;
+    background-color: #BDE5F8;
+}
+
+.warningBox {
+    color: #9F6000;
+    background-color: #FEEFB3;
+}
+
+.errorBox {
+    color: #D8000C;
+    background-color: #FFD2D2;
+}
+.inputBatchesPre{
+    color: #D8000C;
+    background-color: #FFD2D2;
+    
+    margin: 5px 0%;
+   
+    padding: 12px;
+    border-radius: .5em;
+    width: 100%;
+}
+.inputBatchesPos{
+    color: #4F8A10;
+    background-color: #DFF2BF;
+}
+.input{ 
+    margin: 5px 0%;
+    padding: 12px;
+    border-radius: .5em;
+    width: 100%;
+}
+
+.infoBox i, .successBox i, .warningBox i, .errorBox i {
+    margin: 10px 10px;
+    font-size: 1.5em;
+    vertical-align: middle;
+}
+
+/* Spinner Loader */
+.loader {
+    display: initial;
+    position: fixed;
+    left: 0px;
+    top: 10%;
+    width: 100%;
+    height: 50%;
+    z-index: 9999;
+    background: #fafafa url(../img/page-loader.gif) no-repeat center center;
+    text-align: center;
+    color: #999;
+}
+
+.btn_confirm {
+   
+    position: fixed;
+    left: 0px;
+    bottom: 0%;
+    width: 100%;
+}
+#c {
+    display: initial;
+    position: fixed;
+    left: 0px;
+    top: 50%;
+    width: 100%;
+    height: 0%;
+    z-index: 9999;
+    
+    text-align: center;
+}
+.c h3{
+   
+    font-weight: 300;
+    font-style: italic;  
+    
+}
+.linea {
+    position: relative;
+    border-top:1px solid;
+    width: 100%;
+}
+button {
+    text-decoration: none !important;
+}
+
+/* Spinner Loader */
+
+#loader {
+    z-index: 1;
+    border: 12px solid #f3f3f3;
+    border-radius: 60%;
+    border-top: 12px solid #324a5d;
+    border-bottom : 12px solid #324a5d;
+    width: 90px;
+    height: 90px;
+    -webkit-animation: spin 2s linear infinite;
+    animation: spin 2s linear infinite;
+
+}
+
+
+
+@-webkit-keyframes spin {
+    0% {
+        -webkit-transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+    }
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+#homeLoginContent h3 {
+    font-weight: 300;
+    font-style: italic;
+}
+span.helloMr {
+    position: absolute;
+    top: .65em;
+    right: .4em;
+    text-transform: initial
+}
+.labels{
+    text-decoration: none; 
+    font-weight: bold; 
+    color: black; 
+    font-size: 9px; 
+    font-family: Arial, Helvetica;
 }
